adds fave notation

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -72,7 +72,7 @@ $.get('/api/bests',  function(req, res) {
             'marker-size': 'medium'
           })
         })
-      .bindPopup(venue +'<br/>' + address)
+      .bindPopup(venue +'<br/>' + address +"<br/>Sarah's Fave")
         .addTo(categoryLayer);
   }
 });
@@ -94,7 +94,7 @@ $.get('/api/bests',  function(req, res) {
             'marker-size': 'medium'
           })
       })
-      .bindPopup(venue +'<br/>' + address)
+      .bindPopup(venue +'<br/>' + address +"<br/>Sarah's Fave")
         .addTo(categoryLayer);
     }
   }
@@ -115,7 +115,7 @@ $.get('/api/bests',  function(req, res) {
             'marker-size': 'medium'
           })
       })
-      .bindPopup(venue +'<br/>' + address)
+      .bindPopup(venue +'<br/>' + address +"<br/>Sarah's Fave")
         .addTo(categoryLayer);
     }
   }
@@ -136,7 +136,7 @@ $.get('/api/bests',  function(req, res) {
             'marker-size': 'medium'
           })
       })
-      .bindPopup(venue +'<br/>' + address)
+      .bindPopup(venue +'<br/>' + address +"<br/>Sarah's Fave")
         .addTo(categoryLayer);
     }
   }
@@ -157,7 +157,7 @@ $.get('/api/bests',  function(req, res) {
             'marker-size': 'medium'
           })
       })
-      .bindPopup(venue +'<br/>' + address)
+      .bindPopup(venue +'<br/>' + address +"<br/>Sarah's Fave")
         .addTo(categoryLayer);
     }
   }
@@ -178,7 +178,7 @@ $.get('/api/bests',  function(req, res) {
             'marker-size': 'medium'
           })
       })
-      .bindPopup(venue +'<br/>' + address)
+      .bindPopup(venue +'<br/>' + address +"<br/>Sarah's Fave")
         .addTo(categoryLayer);
     }
   }
@@ -199,7 +199,7 @@ $.get('/api/bests',  function(req, res) {
             'marker-size': 'medium'
           })
       })
-      .bindPopup(venue +'<br/>' + address)
+      .bindPopup(venue +'<br/>' + address +"<br/>Sarah's Fave")
         .addTo(categoryLayer);
     }
   }
@@ -220,7 +220,7 @@ $.get('/api/bests',  function(req, res) {
             'marker-size': 'medium'
           })
       })
-      .bindPopup(venue +'<br/>' + address)
+      .bindPopup(venue +'<br/>' + address +"<br/>Sarah's Fave")
         .addTo(categoryLayer);
     }
   }
@@ -241,7 +241,7 @@ $.get('/api/bests',  function(req, res) {
             'marker-size': 'medium'
           })
       })
-      .bindPopup(venue +'<br/>' + address)
+      .bindPopup(venue +'<br/>' + address +"<br/>Sarah's Fave")
         .addTo(categoryLayer);
     }
   }
@@ -262,7 +262,7 @@ $.get('/api/bests',  function(req, res) {
             'marker-size': 'medium'
           })
       })
-      .bindPopup(venue +'<br/>' + address)
+      .bindPopup(venue +'<br/>' + address +"<br/>Sarah's Fave")
         .addTo(categoryLayer);
     }
   }
@@ -283,7 +283,7 @@ $.get('/api/bests',  function(req, res) {
             'marker-size': 'medium'
           })
       })
-      .bindPopup(venue +'<br/>' + address)
+      .bindPopup(venue +'<br/>' + address +"<br/>Sarah's Fave")
         .addTo(categoryLayer);
     }
   }
@@ -304,7 +304,7 @@ $.get('/api/bests',  function(req, res) {
             'marker-size': 'medium'
           })
       })
-      .bindPopup(venue +'<br/>' + address)
+      .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
         .addTo(categoryLayer);
     }
   }
