--- a/public/views/index.html
+++ b/public/views/index.html
@@ -37,9 +37,10 @@
   </div>
 <div id='map'></div>
 <script>
+
 L.mapbox.accessToken = 'pk.eyJ1IjoicHN3ZWV0cG90YXRvIiwiYSI6IjN1eWtxVnMifQ.EPs2g3oW5H1g92TAGy0hfg';
 var map = L.mapbox.map('map', 'psweetpotato.j7cn54e5')
-    .setView([40.751, -73.985], 13);
+    .setView([40.751, -73.985], 13)
 // Credit Foursquare for their wonderful data
 map.attributionControl
     .addAttribution('<a href="https://foursquare.com/">Places data from Foursquare</a>');
@@ -64,7 +65,10 @@ var addAll = function(){
     }
   });
 };
-
+$(map).ready(function() {
+  addAll();
+  categoryLayer.addTo(map);
+});
 var categoryLayer = L.layerGroup();
 var addBagel = function(){
   $.get('/api/bests',  function(req, res) {
@@ -354,6 +358,7 @@ $('#catSelector').change(function (newCat){
       break;
     };
   });
+
 </script>
 </body>
 </html>
