--- a/public/views/best.html
+++ b/public/views/best.html
@@ -15,6 +15,7 @@
     <input type="text" name="address"  ng-model="best.myBestForm.address"> Address <br/>
     <input type="text" name="category"  ng-model="best.myBestForm.category"> Category <br/>
     <input type="text" name="category_id"  ng-model="best.myBestForm.category_id"> Category Id<br/>
+    <input type="text" name="venue_id"  ng-model="best.myBestForm.venue_id"> Venue Id<br/>
     <!-- <input type="hidden" name="user"  ng-model="best.myBestForm.user"><br/> --><!--  TODO:should pull user from params/sessions -->
     <input type="submit" id="submit" value="Submit" />
   </form>
