deletes hardcoded user info

--- a/public/views/map.html
+++ b/public/views/map.html
@@ -60,7 +60,7 @@ var addAll = function(){
           'marker-size': 'medium'
         })
       })
-        .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
+        .bindPopup(venue +'<br/>' + address +"<br/>")
           .addTo(categoryLayer);
     }
   });
@@ -85,7 +85,7 @@ var addBagel = function(){
             'marker-size': 'medium'
           })
         })
-          .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
+          .bindPopup(venue +'<br/>' + address +"<br/>")
             .addTo(categoryLayer);
       }
     }
@@ -106,7 +106,7 @@ var addBrunch = function(){
             'marker-size': 'medium'
           })
         })
-          .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
+          .bindPopup(venue +'<br/>' + address +"<br/>")
             .addTo(categoryLayer);
       }
     }
@@ -127,7 +127,7 @@ var addBurger = function(){
             'marker-size': 'medium'
           })
         })
-          .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
+          .bindPopup(venue +'<br/>' + address +"<br/>")
             .addTo(categoryLayer);
       }
     }
@@ -148,7 +148,7 @@ var addCoffee = function(){
             'marker-size': 'medium'
           })
         })
-          .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
+          .bindPopup(venue +'<br/>' + address +"<br/>")
             .addTo(categoryLayer);
       }
     }
@@ -169,7 +169,7 @@ var addDessert = function(){
             'marker-size': 'medium'
           })
         })
-          .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
+          .bindPopup(venue +'<br/>' + address +"<br/>")
             .addTo(categoryLayer);
       }
     }
@@ -190,7 +190,7 @@ var addDoughnuts = function(){
             'marker-size': 'medium'
           })
         })
-          .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
+          .bindPopup(venue +'<br/>' + address +"<br/>")
           .addTo(categoryLayer);
       }
     }
@@ -211,7 +211,7 @@ var addIceCream = function(){
             'marker-size': 'medium'
           })
         })
-        .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
+        .bindPopup(venue +'<br/>' + address +"<br/>")
           .addTo(categoryLayer);
       }
     }
@@ -232,7 +232,7 @@ var addPizza = function(){
             'marker-size': 'medium'
           })
         })
-          .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
+          .bindPopup(venue +'<br/>' + address +"<br/>")
             .addTo(categoryLayer);
       }
     }
@@ -253,7 +253,7 @@ var addRamen = function(){
             'marker-size': 'medium'
           })
         })
-          .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
+          .bindPopup(venue +'<br/>' + address +"<br/>")
             .addTo(categoryLayer);
       }
     }
@@ -274,7 +274,7 @@ var addSushi = function(){
             'marker-size': 'medium'
           })
         })
-          .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
+          .bindPopup(venue +'<br/>' + address +"<br/>")
           .addTo(categoryLayer);
       }
     }
@@ -295,7 +295,7 @@ var addTaco = function(){
             'marker-size': 'medium'
           })
         })
-        .bindPopup(venue +'<br/>' + address +"<br/><strong>Sarah's Fave</strong>")
+        .bindPopup(venue +'<br/>' + address +"<br/>")
           .addTo(categoryLayer);
       }
     }
