refactors layer functions into one

--- a/public/views/map.html
+++ b/public/views/map.html
@@ -23,6 +23,11 @@
 </head>
 <body>
   <div class="overlay" ng-app="LayerCtrl" ng-controller="LayerController">
+    <ul>
+      <li ng-repeat='layer in layers'>
+        <span id="cat">{{layer.name}}</span>
+      </li>
+    </ul>
     <span>
       <select id="catSelector" ng-model="myLayers" ng-options="layer.name for layer in layers" >
 
@@ -35,6 +40,7 @@
         <button type="submit" id="submit" value="Search" ng-click="search();">Search</button>
       </form>
     </span>
+
   </div>
 <div id='map'></div>
 <script>
@@ -45,320 +51,6 @@ var map = L.mapbox.map('map', 'psweetpotato.j7cn54e5')
 // Credit Foursquare for their wonderful data
 map.attributionControl
     .addAttribution('<a href="https://foursquare.com/">Places data from Foursquare</a>');
-
-var addAll = function(){
-  $.get('/api/bests',  function(req, res) {
-    console.log(req);
-    for (var i = 0; i < req.length; i++) {
-      var venue = req[i].name;
-      var latlng = L.latLng(req[i].lat, req[i].lon);
-      var address = req[i].address;
-      var marker = L.marker(latlng, {
-        icon: L.mapbox.marker.icon({
-          'marker-color': '#F9AC6D',
-          'marker-symbol': 'restaurant',
-          'marker-size': 'medium'
-        })
-      })
-        .bindPopup(venue +'<br/>' + address +"<br/>")
-          .addTo(categoryLayer);
-    }
-  });
-};
-$(map).ready(function() {
-  addAll();
-  categoryLayer.addTo(map);
-});
-var categoryLayer = L.layerGroup();
-var addBagel = function(){
-  $.get('/api/bests',  function(req, res) {
-    console.log(req);
-    for (var i = 0; i < req.length; i++) {
-      if (req[i].category_id == 1) {
-        var venue = req[i].name;
-        var latlng = L.latLng(req[i].lat, req[i].lon);
-        var address = req[i].address;
-        var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#F9AC6D',
-            'marker-symbol': 'restaurant',
-            'marker-size': 'medium'
-          })
-        })
-          .bindPopup(venue +'<br/>' + address +"<br/>")
-            .addTo(categoryLayer);
-      }
-    }
-  });
-};
-var addBrunch = function(){
-  $.get('/api/bests',  function(req, res) {
-    console.log(req);
-    for (var i = 0; i < req.length; i++) {
-      if (req[i].category_id == 2) {
-        var venue = req[i].name;
-        var latlng = L.latLng(req[i].lat, req[i].lon);
-        var address = req[i].address;
-        var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#F9AC6D',
-            'marker-symbol': 'bakery',
-            'marker-size': 'medium'
-          })
-        })
-          .bindPopup(venue +'<br/>' + address +"<br/>")
-            .addTo(categoryLayer);
-      }
-    }
-  });
-};
-var addBurger = function(){
-  $.get('/api/bests',  function(req, res) {
-    console.log(req);
-    for (var i = 0; i < req.length; i++) {
-      if (req[i].category_id == 3) {
-        var venue = req[i].name;
-        var latlng = L.latLng(req[i].lat, req[i].lon);
-        var address = req[i].address;
-        var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#F9AC6D',
-            'marker-symbol': 'fast-food',
-            'marker-size': 'medium'
-          })
-        })
-          .bindPopup(venue +'<br/>' + address +"<br/>")
-            .addTo(categoryLayer);
-      }
-    }
-  });
-};
-var addCoffee = function(){
-  $.get('/api/bests',  function(req, res) {
-    console.log(req);
-    for (var i = 0; i < req.length; i++) {
-      if (req[i].category_id == 4) {
-        var venue = req[i].name;
-        var latlng = L.latLng(req[i].lat, req[i].lon);
-        var address = req[i].address;
-        var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#F9AC6D',
-            'marker-symbol': 'cafe',
-            'marker-size': 'medium'
-          })
-        })
-          .bindPopup(venue +'<br/>' + address +"<br/>")
-            .addTo(categoryLayer);
-      }
-    }
-  });
-};
-var addDessert = function(){
-  $.get('/api/bests',  function(req, res) {
-    console.log(req);
-    for (var i = 0; i < req.length; i++) {
-      if (req[i].category_id == 5) {
-        var venue = req[i].name;
-        var latlng = L.latLng(req[i].lat, req[i].lon);
-        var address = req[i].address;
-        var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#F9AC6D',
-            'marker-symbol': 'restaurant',
-            'marker-size': 'medium'
-          })
-        })
-          .bindPopup(venue +'<br/>' + address +"<br/>")
-            .addTo(categoryLayer);
-      }
-    }
-  });
-};
-var addDoughnuts = function(){
-  $.get('/api/bests',  function(req, res) {
-    console.log(req);
-    for (var i = 0; i < req.length; i++) {
-      if (req[i].category_id == 6) {
-        var venue = req[i].name;
-        var latlng = L.latLng(req[i].lat, req[i].lon);
-        var address = req[i].address;
-        var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#F9AC6D',
-            'marker-symbol': 'restaurant',
-            'marker-size': 'medium'
-          })
-        })
-          .bindPopup(venue +'<br/>' + address +"<br/>")
-          .addTo(categoryLayer);
-      }
-    }
-  });
-};
-var addIceCream = function(){
-  $.get('/api/bests',  function(req, res) {
-    console.log(req);
-    for (var i = 0; i < req.length; i++) {
-      if (req[i].category_id == 7) {
-        var venue = req[i].name;
-        var latlng = L.latLng(req[i].lat, req[i].lon);
-        var address = req[i].address;
-        var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#F9AC6D',
-            'marker-symbol': 'ice-cream',
-            'marker-size': 'medium'
-          })
-        })
-        .bindPopup(venue +'<br/>' + address +"<br/>")
-          .addTo(categoryLayer);
-      }
-    }
-  });
-};
-var addPizza = function(){
-  $.get('/api/bests',  function(req, res) {
-    console.log(req);
-    for (var i = 0; i < req.length; i++) {
-      if (req[i].category_id == 8) {
-        var venue = req[i].name;
-        var latlng = L.latLng(req[i].lat, req[i].lon);
-        var address = req[i].address;
-        var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#F9AC6D',
-            'marker-symbol': 'restaurant',
-            'marker-size': 'medium'
-          })
-        })
-          .bindPopup(venue +'<br/>' + address +"<br/>")
-            .addTo(categoryLayer);
-      }
-    }
-  });
-};
-var addRamen = function(){
-  $.get('/api/bests',  function(req, res) {
-    console.log(req);
-    for (var i = 0; i < req.length; i++) {
-      if (req[i].category_id == 9) {
-        var venue = req[i].name;
-        var latlng = L.latLng(req[i].lat, req[i].lon);
-        var address = req[i].address;
-        var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#F9AC6D',
-            'marker-symbol': 'restaurant',
-            'marker-size': 'medium'
-          })
-        })
-          .bindPopup(venue +'<br/>' + address +"<br/>")
-            .addTo(categoryLayer);
-      }
-    }
-  });
-};
-var addSushi = function(){
-  $.get('/api/bests',  function(req, res) {
-    console.log(req);
-    for (var i = 0; i < req.length; i++) {
-      if (req[i].category_id == 10) {
-        var venue = req[i].name;
-        var latlng = L.latLng(req[i].lat, req[i].lon);
-        var address = req[i].address;
-        var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#F9AC6D',
-            'marker-symbol': 'restaurant',
-            'marker-size': 'medium'
-          })
-        })
-          .bindPopup(venue +'<br/>' + address +"<br/>")
-          .addTo(categoryLayer);
-      }
-    }
-  });
-};
-var addTaco = function(){
-  $.get('/api/bests',  function(req, res) {
-    console.log(req);
-    for (var i = 0; i < req.length; i++) {
-      if (req[i].category_id == 11) {
-        var venue = req[i].name;
-        var latlng = L.latLng(req[i].lat, req[i].lon);
-        var address = req[i].address;
-        var marker = L.marker(latlng, {
-          icon: L.mapbox.marker.icon({
-            'marker-color': '#F9AC6D',
-            'marker-symbol': 'restaurant',
-            'marker-size': 'medium'
-          })
-        })
-        .bindPopup(venue +'<br/>' + address +"<br/>")
-          .addTo(categoryLayer);
-      }
-    }
-  });
-}
-
-$('#catSelector').change(function (newCat){
-  console.log(newCat.currentTarget.value);
-  newCat = newCat.currentTarget.value;
-  console.log(newCat);
-  categoryLayer.clearLayers(map);
-  switch (newCat) {
-    case '0':
-      addAll();
-      categoryLayer.addTo(map);
-      break;
-    case '1':
-      addBagel();
-      categoryLayer.addTo(map);
-      break;
-    case '2':
-      addBrunch();
-      categoryLayer.addTo(map);
-      break;
-    case '3':
-      addBurger();
-      categoryLayer.addTo(map);
-      k;
-    case '4':
-      addCoffee();
-      categoryLayer.addTo(map);
-      break;
-    case '5':
-      addDessert();
-      categoryLayer.addTo(map);
-      break;
-    case '6':
-      addDoughnuts();
-      categoryLayer.addTo(map);
-      break;
-    case '7':
-      addIceCream();
-      categoryLayer.addTo(map);
-      break;
-    case '8':
-      addPizza();
-      categoryLayer.addTo(map);
-      break;
-    case '9':
-      addRamen();
-      categoryLayer.addTo(map);
-      break;
-    case '10':
-      addSushi();
-      categoryLayer.addTo(map);
-      break;
-    case '11':
-      addTaco();
-      categoryLayer.addTo(map);
-      break;
-    };
-  });
-
 </script>
 </body>
 </html>
