--- a/public/style.css
+++ b/public/style.css
@@ -11,8 +11,12 @@ body{
   top: 0;
   right: 0;
   width: 25%;
-  height: 15%;
+  height: 45%;
   z-index: 10;
   background-color: #FFE7B8;
   opacity: .8;
+}
+
+#cat {
+  list-style: none;
 }
