--- a/views/map.ejs
+++ b/views/map.ejs
@@ -24,9 +24,10 @@
 <body>
   <div class="overlay" ng-app="LayerCtrl" ng-controller="LayerController">
     <h1>Pick A Category</h1>
-    <strong>id</strong>: <%= user._id %><br>
+
 
     <ul id="layerUL" class="allOrMe">
+      <span id="userId"><%= user._id %></span>
       <li id='all'>Theirs</li>
       <li id='user'>Mine</li>
       <!-- <li id='friends'>Friends</li> -->
