fixes overlay div for adding

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -22,32 +22,38 @@
 
 </head>
 <body>
-  <div class="overlay" ng-app="LayerCtrl" ng-controller="LayerController">
-    <h1>Pick A Category</h1>
-
-
+  <div ng-app="LayerCtrl" ng-controller="LayerController">
+    <div class="overlay">
     <ul id="layerUL" class="allOrMe">
       <span id="userId"><%= user._id %></span></br>
-      <li id='all' ng-click='visible = false'>Theirs</li>
-      <li id='mine' ng-click='visible = true'>Mine</li>
+      <li id='all' >Theirs</li>
+      <li id='mine' >Mine</li>
       <!-- <li id='friends'>Friends</li> -->
     </ul>
     <ul id="layerUL">
       <li ng-repeat='layer in layers'>
-        <span id="cat">{{layer.name}}</span>
-        <form ng-show='visible'>
-        <button type="submit" id="submit" class='addBest'value="Add" ng-click="search();">Add</button>
-        </form>
+        <span class="cat" id=' {{layer.name}} ' ng-click="toggle()">{{layer.name}}</span>
       </li>
     </ul>
 
       <span>
         <form name="searchWord" ng-controller="SearchCtrl">
           <input type="text" name="sWord" ng-model="keywords" class="input"><br/>
+          <button type="submit" id="submit" value="Search" ng-click="search();" >Search</button>
+        </form>
+      </span>
+      </div>
+      <div class="overlay" id="AddDiv" ng-show='visible'>
+        <span>
+        <form name="searchWord" ng-controller="SearchCtrl">
+          <input type="text" name="sWord" ng-model="keywords" class="input"><br/>
           <button type="submit" id="submit" value="Search" ng-click="search();">Search</button>
         </form>
       </span>
+      </div>
     </div>
+
+
 
 
 <div id='map'></div>
