--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,7 @@ body{
   position:absolute; top:0; bottom:0; width:100%;
 }
 
+
 .overlay{
   position: fixed;
   top: 0;
@@ -13,7 +14,7 @@ body{
   width: 25%;
   height: 50%;
   z-index: 10;
-  background-color: #FFE7B8;
+  background-color: #949291;
   opacity: .8;
 }
 
@@ -29,4 +30,8 @@ padding-right: 20px;
 
 #userId {
   visibility: hidden;
+}
+
+#AddDiv {
+  opacity: 1;
 }
