alters result display

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -50,8 +50,8 @@
         </form>
         <ul id="resultsUL">
         <li ng-repeat='result in results'>
-          <span class="result" id=' {{result.name}} ' >{{result.name}}</span></br>
-          <span class="result" id=' {{result.address}} ' >{{result.address}}</span>
+          <span id='{{result.name}}'>{{result.name}}</span></br>
+          <span id='{{result.address}}'>{{result.address}}</span>
         </li>
       </ul>
       </span>
