--- a/views/map.ejs
+++ b/views/map.ejs
@@ -7,6 +7,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
     <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <script src="js/services/BestService.js"></script>
     <script src="js/controllers/BestCtrl.js"></script>
     <script src="js/services/UserService.js"></script>
@@ -25,23 +27,24 @@
     <div class="overlay" >
       <ul id="layerUL" class="allOrMe">
         <span id="userId"><%= user._id %></span></br>
-          <li id='all'>Theirs</li>
-          <li id='mine' ng-click='changeOwner();' >Mine</li>
+          <div class="AllDiv"><li id='all'>Theirs</li></div>
+          <div class="MineDiv"><li id='mine' ng-click='changeOwner();' >Mine</li></div>
           <!-- <li id='friends'>Friends</li> -->
       </ul>
-      <ul id="layerUL">
+      <ul id="layerUL" class="layers">
         <li ng-repeat='layer in layers'>
-          <span class="cat" id=' {{layer.name}} ' ng-click="toggle()">{{layer.name}}</span>
+         <span class="cat" id=' {{layer.name}} ' ng-click="toggle()">{{layer.name}}</span>
         </li>
       </ul>
-      <span>
+      <!-- <span>
         <form name="searchWord" ng-controller="SearchController">
           <input type="text" name="sWord" ng-model="keywords" class="input"><br/>
           <button type="submit" id="submit" value="Search" ng-click="search();" >Search</button>
         </form>
-      </span>
+      </span> -->
     </div>
     <div class="overlay" id="AddDiv" ng-show='visible'>
+      <span class="fa fa-times fa-lg" id="close" ng-click="toggle()"></span>
       <h1>Proclaim the best <span id="addDivHead"> catText </span></h1>
       <span ng-controller="SearchController">
         <form name="searchWord">
