--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,16 @@ body{
   background-color: #949291;
   opacity: .8;
 }
+.CAToverlay{
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 25%;
+  height: 100%;
+  z-index: 10;
+  background-color: #949291;
+  opacity: .8;
+}
 .AllDiv {
   float: left;
   width: 43%;
