--- a/views/map.ejs
+++ b/views/map.ejs
@@ -43,7 +43,7 @@
         </form>
       </span> -->
     </div>
-    <div class="overlay" id="AddDiv" ng-show='visible'>
+    <div class="CAToverlay" id="AddDiv" ng-show='visible'>
       <span class="fa fa-times fa-lg" id="close" ng-click="close()"></span>
       <h1>Proclaim the best <span id="addDivHead"> catText </span></h1>
       <span ng-controller="SearchController">
@@ -73,7 +73,7 @@
 
 L.mapbox.accessToken = 'pk.eyJ1IjoicHN3ZWV0cG90YXRvIiwiYSI6IjN1eWtxVnMifQ.EPs2g3oW5H1g92TAGy0hfg';
 var map = L.mapbox.map('map', 'psweetpotato.j7cn54e5')
-    .setView([40.751, -73.985], 13)
+    .setView([40.751, -73.985], 13);
 // Credit Foursquare for their wonderful data
 map.attributionControl
     .addAttribution('<a href="https://foursquare.com/">Places data from Foursquare</a>');
