--- a/public/style.css
+++ b/public/style.css
@@ -68,7 +68,7 @@ body{
   text-align:center;
   text-shadow:1px 1px 0px #ffffff;
 }
-.MineDiv {
+.MyDiv {
   float: right;
   width: 43%;
   padding-left: 10px;
@@ -109,13 +109,13 @@ body{
   text-align:center;
   text-shadow:1px 1px 0px #ffffff;
 }
-.MineDiv:hover {
+.MyDiv:hover {
   background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
   background:-moz-linear-gradient( center top, #dfdfdf 25%, #ededed 100% );
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
   background-color:#dfdfdf;
 }
-.MineDiv:active {
+.MyDiv:active {
   position:relative;
   top:1px;
 }
