adds styled divs

--- a/views/map.ejs
+++ b/views/map.ejs
@@ -25,7 +25,7 @@
 <body>
   <div ng-app="LayerCtrl" ng-controller="LayerController">
     <div class="overlay" >
-      <ul id="layerUL" class="allOrMe">
+      <ul class="allOrMe">
         <span id="userId"><%= user._id %></span></br>
           <div class="AllDiv"><li id='all' >Theirs</li></div>
           <div class="MyDiv"><li id='mine' ng-click='changeOwner();' >Mine</li></div>
