--- a/views/map.ejs
+++ b/views/map.ejs
@@ -17,6 +17,7 @@
     <script src="js/controllers/SearchCtrl.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon:400italic|Averia+Serif+Libre:700' rel='stylesheet' type='text/css'>
 <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
 <link href="./style.css" rel="stylesheet" type="text/css">
@@ -39,21 +40,26 @@
     </div>
     <div class="CAToverlay" id="AddDiv" ng-show='visible'>
       <span class="fa fa-times fa-lg" id="close" ng-click="close()"></span>
-      <h1>Proclaim the best <span id="addDivHead"> catText </span></h1>
+      <h1>Proclaim the Best <span id="addDivHead"> catText </span></h1></br></br>
+      <div id="searchdiv">
       <span ng-controller="SearchController">
         <form name="searchWord">
           <input type="text" name="sWord" ng-model="keywords" class="input" placeholder="pizza, etc."><br/>
           <button type="submit" id="submit" value="Search" ng-click="search();">Search the Map</button>
         </form>
         </span>
-        <p>Or</p>
-        <span>Follow a friend's suggestion</span>
-        <ul id="suggestionsUL">
-        <li ng-repeat='suggestion in suggestions'>
-          <span id='{{suggestion.name}}'>{{suggestion.name}}</span></br>
-          <span id='{{suggestion.address}}'>{{suggestion.address}}</span>
-        </li>
-        </ul>
+      </div>
+    </br></br>
+        <p id="sug">Take a friend's suggestion</p>
+        <div id="suglist">
+          <ul id="suggestionsUL">
+            <li id="sugli" ng-repeat='suggestion in suggestions | limitTo:5'
+            ng-click="addSug()">
+              <span id='{{suggestion.name}}'>{{suggestion.name}}</span></br>
+              <span id='{{suggestion.address}}'>{{suggestion.address}}</span>
+            </li>
+          </ul>
+        </div>
 
     </div>
   </div>
